--- a/FoodDeliveryWholeProject/.classpath
+++ b/FoodDeliveryWholeProject/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.38-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar" sourcepath="D:/Installations/eclipse_ee/eclipse/javamail-1.4.7-src.zip"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
